// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text renders correctly with tooltip 1`] = `
<DocumentFragment>
  .cache-1a2ptlp-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0%;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-1a2ptlp-StyledText [title]:hover::after {
  content: attr(title);
  position: absolute;
  top: -100%;
  left: 0;
}

<div
    style="width: 100px;"
  >
    <div
      class="cache-1a2ptlp-StyledText e1tg3t120"
    >
      This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </div>
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="Body" 1`] = `
<DocumentFragment>
  .cache-b58jqi-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0%;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-b58jqi-StyledText [title]:hover::after {
  content: attr(title);
  position: absolute;
  top: -100%;
  left: 0;
}

<div
    class="cache-b58jqi-StyledText e1tg3t120"
  >
    Body
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="BodySmall" 1`] = `
<DocumentFragment>
  .cache-1fr2e40-StyledText {
  color: #4a4f62;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0%;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1fr2e40-StyledText [title]:hover::after {
  content: attr(title);
  position: absolute;
  top: -100%;
  left: 0;
}

<div
    class="cache-1fr2e40-StyledText e1tg3t120"
  >
    BodySmall
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="BodySmallStrong" 1`] = `
<DocumentFragment>
  .cache-1pjrzkv-StyledText {
  color: #4a4f62;
  font-size: 14px;
  font-family: Asap;
  font-weight: 600;
  letter-spacing: 0%;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1pjrzkv-StyledText [title]:hover::after {
  content: attr(title);
  position: absolute;
  top: -100%;
  left: 0;
}

<div
    class="cache-1pjrzkv-StyledText e1tg3t120"
  >
    BodySmallStrong
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="BodySmallWeak" 1`] = `
<DocumentFragment>
  .cache-5jjpog-StyledText {
  color: #4a4f62;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0%;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-5jjpog-StyledText [title]:hover::after {
  content: attr(title);
  position: absolute;
  top: -100%;
  left: 0;
}

<div
    class="cache-5jjpog-StyledText e1tg3t120"
  >
    BodySmallWeak
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="BodyStrong" 1`] = `
<DocumentFragment>
  .cache-6z36za-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0%;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-6z36za-StyledText [title]:hover::after {
  content: attr(title);
  position: absolute;
  top: -100%;
  left: 0;
}

<div
    class="cache-6z36za-StyledText e1tg3t120"
  >
    BodyStrong
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="Caption" 1`] = `
<DocumentFragment>
  .cache-1cxk36d-StyledText {
  color: #4a4f62;
  font-size: 12px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0%;
  line-height: 16px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1cxk36d-StyledText [title]:hover::after {
  content: attr(title);
  position: absolute;
  top: -100%;
  left: 0;
}

<div
    class="cache-1cxk36d-StyledText e1tg3t120"
  >
    Caption
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="CaptionSmall" 1`] = `
<DocumentFragment>
  .cache-kicf78-StyledText {
  color: #4a4f62;
  font-size: 10px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0%;
  line-height: 16px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-kicf78-StyledText [title]:hover::after {
  content: attr(title);
  position: absolute;
  top: -100%;
  left: 0;
}

<div
    class="cache-kicf78-StyledText e1tg3t120"
  >
    CaptionSmall
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="Heading" 1`] = `
<DocumentFragment>
  .cache-kwnxzb-StyledText {
  color: #4a4f62;
  font-size: 25px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0%;
  line-height: 32px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-kwnxzb-StyledText [title]:hover::after {
  content: attr(title);
  position: absolute;
  top: -100%;
  left: 0;
}

<div
    class="cache-kwnxzb-StyledText e1tg3t120"
  >
    Heading
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="HeadingLarge" 1`] = `
<DocumentFragment>
  .cache-4yc0c3-StyledText {
  color: #4a4f62;
  font-size: 35px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0%;
  line-height: 48px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-4yc0c3-StyledText [title]:hover::after {
  content: attr(title);
  position: absolute;
  top: -100%;
  left: 0;
}

<div
    class="cache-4yc0c3-StyledText e1tg3t120"
  >
    HeadingLarge
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="HeadingSmall" 1`] = `
<DocumentFragment>
  .cache-teg3s9-StyledText {
  color: #4a4f62;
  font-size: 21px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0%;
  line-height: 32px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-teg3s9-StyledText [title]:hover::after {
  content: attr(title);
  position: absolute;
  top: -100%;
  left: 0;
}

<div
    class="cache-teg3s9-StyledText e1tg3t120"
  >
    HeadingSmall
  </div>
</DocumentFragment>
`;

exports[`Text with multiple nested chidldren renders correctly 1`] = `
<DocumentFragment>
  .cache-b58jqi-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0%;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-b58jqi-StyledText [title]:hover::after {
  content: attr(title);
  position: absolute;
  top: -100%;
  left: 0;
}

.cache-kwnxzb-StyledText {
  color: #4a4f62;
  font-size: 25px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0%;
  line-height: 32px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-kwnxzb-StyledText [title]:hover::after {
  content: attr(title);
  position: absolute;
  top: -100%;
  left: 0;
}

<div
    class="cache-b58jqi-StyledText e1tg3t120"
  >
    Lorem
    <span>
      Ipsum
    </span>
    <span
      class="cache-kwnxzb-StyledText e1tg3t120"
    >
      <span>
        Dolor
      </span>
    </span>
    Sit
  </div>
</DocumentFragment>
`;
